BinaryContentService 구현 및 세부 코드 수정
refactor: 리스트 반환 로직에서 List.of()와 .toList() 사용하는 것으로 변경