@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -48,7 +47,7 @@ public class BasicUserStatusService implements UserStatusService {
         return userStatusRepository.findAll()
                 .stream()
                 .map(userStatusMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
